fix: modal fade-in & out fixed visibility timing function

--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -10,5 +10,5 @@
 
   visibility: hidden;
   opacity: 0;
-  transition: opacity 0.3s, visibility 0.3s ease-in;
+  transition: opacity 0.3s, visibility 0s ease-in 0.3s;
 }
